CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(dtrmgr LANGUAGES C)

FIND_PACKAGE(SQLite3 REQUIRED)

CONFIGURE_FILE(config.h.in config.h)

ADD_EXECUTABLE(dtrmgr STimeRange.c SSchedule.c dtrmgr.c)
TARGET_INCLUDE_DIRECTORIES(dtrmgr PUBLIC ${SQLite3_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
TARGET_LINK_LIBRARIES(dtrmgr ${SQLite3_LIBRARIES})
